syntax = "proto3";
package palomachain.paloma.treasury;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";

import "palomachain/paloma/valset/common.proto";
import "palomachain/paloma/treasury/fees.proto";

option go_package = "github.com/palomachain/paloma/v2/x/treasury/types";

// Msg defines the Msg service.
service Msg {
  rpc UpsertRelayerFee(MsgUpsertRelayerFee)
      returns (Empty);
  }

message MsgUpsertRelayerFee {
  option (cosmos.msg.v1.signer) = "metadata";

  palomachain.paloma.valset.MsgMetadata metadata = 1
      [ (gogoproto.nullable) = false ];

  RelayerFeeSetting fee_setting = 2;
}
